--- a/kindred_causes/main/static/css/input.css
+++ b/kindred_causes/main/static/css/input.css
@@ -4,8 +4,8 @@
 
 @plugin "daisyui/theme" {
     name: "cupcake";
-    default: false;
-    prefersdark: false;
+    default: true;
+    prefersdark: true;
     color-scheme: "light";
     --color-base-100: oklch(97.788% 0.004 56.375);
     --color-base-200: oklch(93.982% 0.007 61.449);
