Removed class from login test div

--- a/kindred_causes/main/templates/login.html
+++ b/kindred_causes/main/templates/login.html
@@ -1,4 +1,4 @@
 {% extends 'root.html' %}
 {% block content %}
-<div class="bg-red-100 border border-black">LOGIN</div>
+<div class="">LOGIN</div>
 {% endblock content %}
