Added some basic views and a simple navbar

--- a/kindred_causes/main/templates/landing.html
+++ b/kindred_causes/main/templates/landing.html
@@ -1,7 +1,7 @@
 {% extends 'root.html' %}
 
-{% block title %}Login{% endblock title %}
+{% block title %}Landing{% endblock title %}
 
 {% block content %}
-<div>Login</div>
+<div>Landing</div>
 {% endblock content %}
