--- a/kindred_causes/templates/navbar.html
+++ b/kindred_causes/templates/navbar.html
@@ -9,28 +9,34 @@
         <li><a href="{% url 'login' %}">Login</a></li>
         <li><a href="{% url 'event_browser' %}">Browse Events</a></li>
         <li><a href="{% url 'event_preview' %}">Preview Event</a></li>
-        <li><a href="{% url 'inbox' %}">My Inbox</a></li>
-      </ul>
-      <div class="dropdown dropdown-end">
-        <div tabindex="0" role="button" class="btn btn-ghost btn-circle avatar">
-          <div class="w-10 rounded-full">
-            <img
-              alt="Tailwind CSS Navbar component"
-              src="https://img.daisyui.com/images/stock/photo-1534528741775-53994a69daeb.webp" />
+
+        <div class="dropdown dropdown-end">
+          <div tabindex="0" role="button" class="btn btn-ghost btn-circle avatar indicator">
+            <span class="indicator-item status indicator-start status-primary"></span>
+            <div class="w-10 rounded-full">
+              <img
+                alt="Tailwind CSS Navbar component"
+                src="https://img.daisyui.com/images/stock/photo-1534528741775-53994a69daeb.webp" />
+            </div>
           </div>
+          <ul
+            tabindex="0"
+            class="menu menu-sm dropdown-content bg-base-100 rounded-box z-1 mt-3 w-52 p-2 shadow">
+            <li>
+              <a class="justify-between" href="{% url 'account' %}">
+                Accout
+              </a>
+            </li>
+            <li>
+              <a class="justify-between" href="{% url 'inbox' %}">
+                Inbox
+                <span class="badge">2</span>
+              </a>
+            </li>
+            <li><a>Settings</a></li>
+            <li><a>Logout</a></li>
+          </ul>
         </div>
-        <ul
-          tabindex="0"
-          class="menu menu-sm dropdown-content bg-base-100 rounded-box z-1 mt-3 w-52 p-2 shadow">
-          <li>
-            <a class="justify-between" href="{% url 'account' %}">
-              Accout
-              <span class="badge">New</span>
-            </a>
-          </li>
-          <li><a>Settings</a></li>
-          <li><a>Logout</a></li>
-        </ul>
-      </div>
+      </ul>
     </div>
 </div>
