--- a/kindred_causes/templates/root.html
+++ b/kindred_causes/templates/root.html
@@ -9,7 +9,7 @@
 </head>
 <body class="flex flex-col min-h-screen justify-between">
     {% include 'navbar.html' %}
-    <div class="grow">
+    <div class="flex grow">
     {% block content %}{% endblock content %}
     </div>
     {% include 'footer.html' %}
