--- a/kindred_causes/main/templates/form.html
+++ b/kindred_causes/main/templates/form.html
@@ -3,12 +3,12 @@
 {% block title %}{% endblock title %}
 
 {% block content %}
-    <form class="flex grow justify-around items-center">
-        <div class="accent bg-base-300 rounded-md h-fit flex flex-col space-y-3.5 p-10">
+    <div class="flex grow justify-around items-center">
+        <form class="accent bg-base-300 rounded-md h-fit flex flex-col space-y-10 p-10">
             <div class="text-2xl">{% block form_title %}{% endblock form_title %}</div>
-        {% block form %}
 
-        {% endblock form %}
-        </div>
-    </form>
+            <div class="flex flex-col space-y-3.5 items-center">{% block form_content %}{% endblock form_content %}</div>
+            {% block form_buttons %}{% endblock form_buttons %}
+        </form>
+    </div>
 {% endblock content %}
