--- a/kindred_causes/main/templates/form.html
+++ b/kindred_causes/main/templates/form.html
@@ -4,7 +4,7 @@
 
 {% block content %}
     <div class="flex grow justify-around items-center">
-        <form class="accent bg-base-300 rounded-md h-fit flex flex-col space-y-10 p-10">
+        <form class="accent bg-base-300 rounded-2xl h-fit flex flex-col space-y-10 p-10">
             <div class="text-2xl">{% block form_title %}{% endblock form_title %}</div>
 
             <div class="flex flex-col space-y-3.5 items-center">{% block form_content %}{% endblock form_content %}</div>
