--- a/kindred_causes/main/templates/login.html
+++ b/kindred_causes/main/templates/login.html
@@ -30,10 +30,7 @@
             title="Must be more than 8 characters, including number, lowercase letter, uppercase letter" />
     </label>
     <p class="validator-hint hidden">
-        Must be more than 8 characters, including
-        <br />At least one number
-        <br />At least one lowercase letter
-        <br />At least one uppercase letter
+        Passwords must match
     </p>
 {% endblock form_content%}
 
