--- a/kindred_causes/main/static/css/output.css
+++ b/kindred_causes/main/static/css/output.css
@@ -1377,6 +1377,28 @@
     }
   }
 }
+.input {
+  &:where(input) {
+    display: inline-block;
+  }
+  :where(input) {
+    border: none;
+    &:focus, &:focus-within {
+      outline-style: none;
+      @media (forced-colors: active) {
+        outline: none;
+        outline-offset: 0;
+      }
+    }
+  }
+  &:focus, &:focus-within {
+    --input-color: var(--color-base-content);
+    box-shadow: none;
+    outline: none;
+    outline-offset: 0;
+    isolation: isolate;
+  }
+}
 @layer base {
   :where(:root),:root:has(input.theme-controller[value=light]:checked),[data-theme=light] {
     color-scheme: light;
