--- a/kindred_causes/main/templates/account.html
+++ b/kindred_causes/main/templates/account.html
@@ -3,5 +3,17 @@
 {% block title %}Account{% endblock title %}
 
 {% block content %}
-<div>Account</div>
+<div class="flex justify-center items-center h-screen">
+    <div class="card w-96 bg-base-100 shadow-xl">
+        <figure class="px-10 pt-10">
+            <img src="https://img.daisyui.com/images/stock/photo-1534528741775-53994a69daeb.webp" alt="Avatar" class="rounded-full w-11 h-11">
+        </figure>
+        <div class="card-body items-center text-center">
+            <div class="card-actions">
+                <button class="btn btn-primary">Edit Profile</button>
+                <button class="btn btn-secondary">Logout</button>
+            </div>
+        </div>
+    </div>
+</div>
 {% endblock content %}
