--- a/kindred_causes/templates/navbar.html
+++ b/kindred_causes/templates/navbar.html
@@ -9,6 +9,8 @@
         <li><a href="{% url 'login' %}">Login</a></li>
         <li><a href="{% url 'event_browser' %}">Browse Events</a></li>
         <li><a href="{% url 'event_preview' %}">Preview Event</a></li>
+        <li><a href="{% url 'volunteer_history' %}">Volunteer History</a></li>
+        <li><a href="{% url 'matching_form' %}">Matching Form</a></li>
 
         <div class="dropdown dropdown-end">
           <div tabindex="0" role="button" class="btn btn-ghost btn-circle avatar indicator">
