--- a/kindred_causes/templates/navbar.html
+++ b/kindred_causes/templates/navbar.html
@@ -3,7 +3,7 @@
       <a class="btn btn-ghost text-xl" href="{% url 'landing' %}">Kindred Causes</a>
     </div>
     <div class="flex-none">
-      <ul class="menu menu-horizontal px-1">
+      <ul class="menu menu-horizontal px-1 gap-2">
         <li><a href="{% url 'home' %}">Home</a></li>
         <li><a href="{% url 'user_registration' %}">Sign Up</a></li>
         <li><a href="{% url 'login' %}">Login</a></li>
@@ -26,7 +26,7 @@
             class="menu menu-sm dropdown-content bg-base-100 rounded-box z-1 mt-3 w-52 p-2 shadow">
             <li>
               <a class="justify-between" href="{% url 'account' %}">
-                Accout
+                Account
               </a>
             </li>
             <li>
