--- a/kindred_causes/main/templates/event_browser.html
+++ b/kindred_causes/main/templates/event_browser.html
@@ -3,5 +3,5 @@
 {% block title %}Event Browser{% endblock title %}
 
 {% block content %}
-<div>Event Browser</div>
+<a role="button" class="btn btn-primary" type="submit" href="{% url 'event_management' %}"> Create a Event (admin only)</a>
 {% endblock content %}
