--- a/kindred_causes/main/templates/account.html
+++ b/kindred_causes/main/templates/account.html
@@ -5,22 +5,35 @@
 {% block content %}
 <div class="flex grow justify-around items-center h-screen">
     <div class="accent bg-base-300 rounded-2xl h-fit flex flex-col space-y-10 p-10 w-3/4">
-        <div class="text-2xl">Account</div>
         <div class="grid grid-cols-2 gap-4">
             <div class="flex flex-col items-center space-y-4">
                 <figure class="px-10 pt-10">
                     <img src="https://img.daisyui.com/images/stock/photo-1534528741775-53994a69daeb.webp" alt="Avatar" class="rounded-full w-24 h-24">
                 </figure>
-                <div class="card-actions flex flex-col space-y-2">
+                <div class="card-actions flex flex-col space-y-6">
                     <button class="btn btn-primary w-full">Edit Profile</button>
                     <button class="btn btn-secondary w-full">Logout</button>
                 </div>
             </div>
             <div class="flex flex-col justify-center items-start space-y-4">
                 <h2 class="text-2xl font-bold">Account Information</h2>
-                <p class="text-lg"><span class="underline-dotted">Name:</span> John Doe</p>
-                <p class="text-lg"><span class="underline-dotted">Email:</span> john.doe@example.com</p>
-                <p class="text-lg"><span class="underline-dotted">Joined:</span> January 1, 2020</p>
+                <div class="collapse collapse-arrow bg-base-200">
+                    <input type="radio" name="my-accordion-2" checked="checked" />
+                    <div class="collapse-title text-xl font-medium">Public Information</div>
+                    <div class="collapse-content">
+                        <p class="text-lg"><span class="underline decoration-dotted">Name:</span> John Doe</p>
+                        <p class="text-lg"><span class="underline decoration-dotted">Email:</span> john.doe@example.com</p>
+                        <p class="text-lg"><span class="underline decoration-dotted">Joined:</span> January 1, 2020</p>
+                    </div>
+                </div>
+                <div class="collapse collapse-arrow bg-base-200">
+                    <input type="radio" name="my-accordion-2" />
+                    <div class="collapse-title text-xl font-medium">Private Information</div>
+                    <div class="collapse-content">
+                        <p class="text-lg"><span class="underline decoration-dotted">Address:</span> 123 Main St</p>
+                        <p class="text-lg"><span class="underline decoration-dotted">Phone:</span> (123) 456-7890</p>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
