--- a/kindred_causes/main/templates/account.html
+++ b/kindred_causes/main/templates/account.html
@@ -20,7 +20,13 @@
             <!--Account Info with expand-->
             <div class="flex flex-col justify-center items-start space-y-4">
                 <h2 class="text-2xl font-bold">My volunteer score: 550</h2>
-                <progress class="progress progress-accent w-56" value="550" max="1000" ></progress>
+                <!--<div class="flex justify-center items-center gap-4">
+                    <div class="radial-progress" style="--value:90;" role="progressbar">Begin</div>
+                    <div class="radial-progress" style="--value:0;" role="progressbar">Medium</div>
+                    <div class="radial-progress" style="--value:0;" role="progressbar">Advance</div>
+                    <div class="radial-progress" style="--value:0;" role="progressbar">Expert</div>
+                </div> -->
+                <progress class="progress w-56" value="550" max="1000"></progress>
                 <h2 class="text-2xl font-bold">Account Information</h2>
                 <div class="collapse collapse-arrow bg-base-200">
                     <input type="radio" name="my-accordion-2" checked="checked" />
